--- a/src/components/AppLayout/Header/Header.module.scss
+++ b/src/components/AppLayout/Header/Header.module.scss
@@ -1,21 +1,16 @@
 @import '../../../styles/_variables.scss';
 
 .header {
+    background-color: $color-dark-blue;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-bottom: 45px;
 
     & .container {
         display: flex;
-        flex-direction: row;
-        justify-content: space-between;
         max-width: $content-width;
         width: 100%;
-        height: 42px;
-        padding: 0 100px;
-        margin-top: 56px;
-        gap: 10px;
+        height: 100px;
 
         @media (max-width: 1150px) {
             padding: 0 50px;
