--- a/src/components/AppLayout/Header/Header.module.scss
+++ b/src/components/AppLayout/Header/Header.module.scss
@@ -8,16 +8,13 @@
 
     & .container {
         display: flex;
-        max-width: $content-width;
         width: 100%;
         height: 100px;
-
-        @media (max-width: 1150px) {
-            padding: 0 50px;
-        }
+        padding: 0 50px;
+        align-items: center;
 
         @media (max-width: 768px) {
-            padding: 0 20px;
+            justify-content: center;
         }
     }
 }
