--- a/src/components/Product-info/Product-info.module.scss
+++ b/src/components/Product-info/Product-info.module.scss
@@ -12,7 +12,7 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    justify-content: flex-start;
+    justify-content: start;
     align-items: start;
 }
 
@@ -23,7 +23,7 @@
 .product_info_btn_group {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: start;
     flex-wrap: wrap;
     gap: 0.5rem;
     width: 100%;
