--- a/src/components/ProductInfo/ProductInfo.module.scss
+++ b/src/components/ProductInfo/ProductInfo.module.scss
@@ -12,8 +12,8 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    justify-content: start;
-    align-items: start;
+    justify-content: flex-start;
+    align-items: flex-start;
 }
 
 .product_info h2 {
@@ -23,7 +23,7 @@
 .product_info_btn_group {
     display: flex;
     flex-direction: row;
-    justify-content: start;
+    justify-content: flex-start;
     flex-wrap: wrap;
     gap: 0.5rem;
     width: 100%;
