--- a/src/components/Typography/Typography.module.scss
+++ b/src/components/Typography/Typography.module.scss
@@ -60,7 +60,7 @@
     text-align: right;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 76.8rem) {
     .h1 {
         font-size: $font-size-m;
         line-height: $line-height-ml;
