--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,31 +1,31 @@
 $color-white: #ffffff;
 $color-black: #000000;
 $color-dark-blue: #0a2640;
-$color-green: #65e4a3;
+$color-coral: rgb(245, 101, 105);
 $color-gray: #777777;
 
 $font-weight-regular: 400;
 $font-weight-semibold: 600;
 $font-weight-bold: 700;
 
-$font-size-xxs: 13px;
-$font-size-xs: 16px;
-$font-size-s: 20px;
-$font-size-sm: 30px;
-$font-size-m: 43px;
-$font-size-xxl: 48px;
-$font-size-xxxl: 64px;
+$font-size-xxs: 1.3rem;
+$font-size-xs: 1.6rem;
+$font-size-s: 2rem;
+$font-size-sm: 3rem;
+$font-size-m: 4.3rem;
+$font-size-xxl: 4.8rem;
+$font-size-xxxl: 6.4rem;
 
-$line-height-xxs: 24px;
-$line-height-xs: 28px;
-$line-height-s: 32px;
-$line-height-sm: 44px;
-$line-height-m: 34px;
-$line-height-ml: 60px;
-$line-height-xxl: 72px;
-$line-height-xxxl: 84px;
+$line-height-xxs: 2.4rem;
+$line-height-xs: 2.8rem;
+$line-height-s: 3.2rem;
+$line-height-sm: 4.4rem;
+$line-height-m: 3.4rem;
+$line-height-ml: 6rem;
+$line-height-xxl: 7.2rem;
+$line-height-xxxl: 8.4rem;
 
-$content-width: 1400px;
+$content-width: 14rem;
 
 $effects-transition: all 0.2s ease-out;
 $effects-hover-opacity: 0.6;
