--- a/src/components/AppLayout/Header/Header.module.scss
+++ b/src/components/AppLayout/Header/Header.module.scss
@@ -9,11 +9,11 @@
     & .container {
         display: flex;
         width: 100%;
-        height: 100px;
-        padding: 0 50px;
+        height: 10rem;
+        padding: 0rem 5rem;
         align-items: center;
 
-        @media (max-width: 768px) {
+        @media (max-width: 76.8rem) {
             justify-content: center;
         }
     }
