--- a/src/components/ProductCard/ProductCard.module.scss
+++ b/src/components/ProductCard/ProductCard.module.scss
@@ -1,16 +1,17 @@
+@import '../../styles/_variables.scss';
+
 .card {
-    width: 300px;
-    height: max-content;
-    text-align: center;
-    border-radius: 10px;
-    padding: 1rem 0.4rem 0 0.4rem;
-    font-size: 1.2rem;
+    width: 30rem;
+    height: 100%;
+    border-radius: 1rem;
+    padding-top: 1rem;
+    font-size: $font-size-xxs;
     text-decoration: none;
-    box-shadow: 5px 5px 15px #c5c5c5;
+    box-shadow: 0.5rem 0.5rem 1.5rem #c5c5c5;
 }
 
 .card_title {
-    font-size: 1.3rem;
+    font-size: $font-size-s;
     color: #3f3f3f;
     font-weight: 500;
     position: relative;
@@ -19,16 +20,21 @@
 .card_img {
     margin-top: 1rem;
     width: 100%;
-    border-end-start-radius: 10px;
-    border-end-end-radius: 10px;
 }
 
-@media (max-width: 576px) {
+@media (max-width: 57.6rem) {
     .card {
-        width: 100%;
+        width: 40rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .card_img {
+        margin-top: 1rem;
+        max-width: 30rem;
     }
 
     .card_title {
-        font-size: 1rem;
+        font-size: $font-size-s;
     }
 }
