--- a/src/pages/product/Product.module.scss
+++ b/src/pages/product/Product.module.scss
@@ -10,7 +10,7 @@
     column-gap: 4rem;
 }
 
-@media (max-width: 576px) {
+@media (max-width: 57.6rem) {
     .container {
         grid-template-columns: 1fr;
     }
