--- a/src/components/ProductCard/ProductCard.module.scss
+++ b/src/components/ProductCard/ProductCard.module.scss
@@ -5,6 +5,7 @@
     height: 100%;
     border-radius: 1rem;
     padding-top: 1rem;
+    margin: 1rem 1rem;
     font-size: $font-size-xxs;
     text-decoration: none;
     box-shadow: 0.5rem 0.5rem 1.5rem #c5c5c5;
@@ -20,11 +21,13 @@
 .card_img {
     margin-top: 1rem;
     width: 100%;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 }
 
 @media (max-width: 57.6rem) {
     .card {
-        width: 40rem;
+        width: 50rem;
         display: flex;
         flex-direction: column;
         align-items: center;
