--- a/src/pages/product/Product.module.scss
+++ b/src/pages/product/Product.module.scss
@@ -1,4 +1,5 @@
 .container {
+    padding-top: 1rem;
     margin-bottom: 3rem;
     box-sizing: border-box;
     width: 100%;
@@ -10,6 +11,7 @@
 
 @media (max-width: 57.6rem) {
     .container {
+        padding-top: 0;
         grid-template-columns: 1fr;
     }
 }
